--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "next": "^15.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "recharts": "^3.6.0",
     "zod": "^4.3.5"
   },
   "devDependencies": {
