--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
     "start": "next start",
     "lint": "next lint",
     "test": "vitest",
-    "db:clear": "tsx scripts/clearDb.ts"
+    "db:clear": "tsx scripts/cleardb.ts"
   },
   "dependencies": {
+    "bcrypt": "^6.0.0",
     "next": "^15.0.0",
+    "next-auth": "^5.0.0-beta.30",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "recharts": "^3.6.0",
@@ -19,6 +21,7 @@
   "devDependencies": {
     "@prisma/client": "^6.19.1",
     "@tailwindcss/postcss": "^4.1.18",
+    "@types/bcrypt": "^6.0.0",
     "@types/node": "^22.10.0",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
